{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 14,
  "lineage": "edbc171b-5142-54c2-df88-652cf2057e72",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0218e4eb9b74c5078",
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:elastic-ip/eipalloc-0218e4eb9b74c5078",
            "domain": "vpc",
            "id": "eipalloc-0218e4eb9b74c5078",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-18-178-248-130.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "18.178.248.130",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-nat-eip-ap-northeast-1a",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-eip-ap-northeast-1a",
              "Project": "Win Dev",
              "stack_name": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f90d985328541d57",
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:elastic-ip/eipalloc-0f90d985328541d57",
            "domain": "vpc",
            "id": "eipalloc-0f90d985328541d57",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-250-34-46.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.250.34.46",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-nat-eip-ap-northeast-1c",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-eip-ap-northeast-1c",
              "Project": "Win Dev",
              "stack_name": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:internet-gateway/igw-0f0aa1bcd4d5338a0",
            "id": "igw-0f0aa1bcd4d5338a0",
            "owner_id": "792248914698",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-igw",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-igw",
              "Project": "Win Dev",
              "stack_name": "dev"
            },
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0218e4eb9b74c5078",
            "association_id": "eipassoc-0a2d600f65b59a460",
            "connectivity_type": "public",
            "id": "nat-05ee5783107e62821",
            "network_interface_id": "eni-0df04f77b73ac16b6",
            "private_ip": "10.30.30.224",
            "public_ip": "18.178.248.130",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-085075a883158da85",
            "tags": {
              "Name": "dev-nat-ap-northeast-1a",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-ap-northeast-1a",
              "Project": "Win Dev",
              "stack_name": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f90d985328541d57",
            "association_id": "eipassoc-02bc62d2db5029930",
            "connectivity_type": "public",
            "id": "nat-0e9e52671ba62409b",
            "network_interface_id": "eni-0bb986aa74f913b01",
            "private_ip": "10.30.35.231",
            "public_ip": "54.250.34.46",
            "region": "ap-northeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e30aa15156264d55",
            "tags": {
              "Name": "dev-nat-ap-northeast-1c",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-nat-ap-northeast-1c",
              "Project": "Win Dev",
              "stack_name": "dev"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05b2db8547ae86c7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05ee5783107e62821",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05b2db8547ae86c7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05b2db8547ae86c7a"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08cb87bcbf243af921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e9e52671ba62409b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08cb87bcbf243af92",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08cb87bcbf243af92"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_inet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f0aa1bcd4d5338a0",
            "id": "r-rtb-0a72854d4ab96fd6f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0a72854d4ab96fd6f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0a72854d4ab96fd6f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:route-table/rtb-05b2db8547ae86c7a",
            "id": "rtb-05b2db8547ae86c7a",
            "owner_id": "792248914698",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "dev-private-rt-ap-northeast-1a",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-private-rt-ap-northeast-1a",
              "Project": "Win Dev",
              "stack_name": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "rtb-05b2db8547ae86c7a",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:route-table/rtb-08cb87bcbf243af92",
            "id": "rtb-08cb87bcbf243af92",
            "owner_id": "792248914698",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "dev-private-rt-ap-northeast-1c",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-private-rt-ap-northeast-1c",
              "Project": "Win Dev",
              "stack_name": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "rtb-08cb87bcbf243af92",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:route-table/rtb-0a72854d4ab96fd6f",
            "id": "rtb-0a72854d4ab96fd6f",
            "owner_id": "792248914698",
            "propagating_vgws": [],
            "region": "ap-northeast-1",
            "route": [],
            "tags": {
              "Name": "dev-public-rt",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-public-rt",
              "Project": "Win Dev",
              "stack_name": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "rtb-0a72854d4ab96fd6f",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6252b6e6a8706d4",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-05b2db8547ae86c7a",
            "subnet_id": "subnet-0c89853631d269b1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4afc54b603737d",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-08cb87bcbf243af92",
            "subnet_id": "subnet-0f9ddf63b6806dc1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eaa081f7e64ace6",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0a72854d4ab96fd6f",
            "subnet_id": "subnet-085075a883158da85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094036b371000fb1d",
            "region": "ap-northeast-1",
            "route_table_id": "rtb-0a72854d4ab96fd6f",
            "subnet_id": "subnet-0e30aa15156264d55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:subnet/subnet-0c89853631d269b1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c89853631d269b1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792248914698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-private-ap-northeast-1a",
              "kubernetes.io/role/internal-elb": "1",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-private-ap-northeast-1a",
              "Project": "Win Dev",
              "kubernetes.io/role/internal-elb": "1",
              "stack_name": "dev"
            },
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "subnet-0c89853631d269b1b",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:subnet/subnet-0f9ddf63b6806dc1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ddf63b6806dc1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "792248914698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-private-ap-northeast-1c",
              "kubernetes.io/role/internal-elb": "1",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-private-ap-northeast-1c",
              "Project": "Win Dev",
              "kubernetes.io/role/internal-elb": "1",
              "stack_name": "dev"
            },
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "subnet-0f9ddf63b6806dc1c",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ap-northeast-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:subnet/subnet-085075a883158da85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.30.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085075a883158da85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792248914698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-public-ap-northeast-1a",
              "kubernetes.io/role/elb": "1",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-public-ap-northeast-1a",
              "Project": "Win Dev",
              "kubernetes.io/role/elb": "1",
              "stack_name": "dev"
            },
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "subnet-085075a883158da85",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        },
        {
          "index_key": "ap-northeast-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:subnet/subnet-0e30aa15156264d55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.30.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e30aa15156264d55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "792248914698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-public-ap-northeast-1c",
              "kubernetes.io/role/elb": "1",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-public-ap-northeast-1c",
              "Project": "Win Dev",
              "kubernetes.io/role/elb": "1",
              "stack_name": "dev"
            },
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "subnet-0e30aa15156264d55",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:vpc/vpc-0c64e8ae86334627c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-00482ac1edccdf64c",
            "default_route_table_id": "rtb-0020fae6beb212502",
            "default_security_group_id": "sg-060a232cfd25fd490",
            "dhcp_options_id": "dopt-86b1f9e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c64e8ae86334627c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0020fae6beb212502",
            "owner_id": "792248914698",
            "region": "ap-northeast-1",
            "tags": {
              "Name": "dev-vpc",
              "stack_name": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-vpc",
              "Project": "Win Dev",
              "stack_name": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "vpc-0c64e8ae86334627c",
            "region": "ap-northeast-1"
          }
        }
      ]
    },
    {
      "module": "module.rabbitmq",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:security-group/sg-0eac24b40577ab579",
            "description": "Security group for RabbitMQ broker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eac24b40577ab579",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow AMQP 5671 TLS",
                "from_port": 5671,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df3f58db52bc8fca"
                ],
                "self": false,
                "to_port": 5671
              },
              {
                "cidr_blocks": [],
                "description": "Allow management console 15671 TLS",
                "from_port": 15671,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df3f58db52bc8fca"
                ],
                "self": false,
                "to_port": 15671
              }
            ],
            "name": "dev-rabbitmq-sg",
            "name_prefix": "",
            "owner_id": "792248914698",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-rabbitmq-sg",
              "env": "prod",
              "tenant": "dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-rabbitmq-sg",
              "Project": "Win Dev",
              "env": "prod",
              "tenant": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "sg-0eac24b40577ab579",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.shared_node"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "controlplane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:security-group/sg-0f0b3f7482618cb35",
            "description": "Test Control plane communication",
            "egress": [],
            "id": "sg-0f0b3f7482618cb35",
            "ingress": [],
            "name": "test-controlplane-sg",
            "name_prefix": "",
            "owner_id": "792248914698",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-control-plane-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "test-control-plane-sg",
              "Project": "Win Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "sg-0f0b3f7482618cb35",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shared_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:security-group/sg-0df3f58db52bc8fca",
            "description": "Test Node-to-Node communication",
            "egress": [],
            "id": "sg-0df3f58db52bc8fca",
            "ingress": [],
            "name": "test-shared-node-sg",
            "name_prefix": "",
            "owner_id": "792248914698",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-shared-node-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "test-shared-node-sg",
              "Project": "Win Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "sg-0df3f58db52bc8fca",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.valkey",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:792248914698:security-group/sg-04bb05567fba3904e",
            "description": "SG for Valkey dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bb05567fba3904e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow Valkey traffic",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df3f58db52bc8fca"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "dev-valkey-sg",
            "name_prefix": "",
            "owner_id": "792248914698",
            "region": "ap-northeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-valkey-sg",
              "env": "prod",
              "tenant": "tenant-a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "dev-valkey-sg",
              "Project": "Win Dev",
              "env": "prod",
              "tenant": "tenant-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c64e8ae86334627c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "792248914698",
            "id": "sg-04bb05567fba3904e",
            "region": "ap-northeast-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.security.aws_security_group.shared_node"
          ]
        }
      ]
    }
  ]
}